--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -14,7 +14,7 @@ body, html{
     padding: 0px;
     margin: 5% auto;
     border-radius: 20px;
-    // .Menu{
-    //     background-color: black;
-    // }
+    .Menu{
+        height: 60px;
+    }
 }
