--- a/client/src/Components/Auth/Auth.scss
+++ b/client/src/Components/Auth/Auth.scss
@@ -40,6 +40,7 @@
         .phone-number{
             margin-top: 50px;
             height: 40px;
+            width: 80%;
             font-size: 20px;
             border-radius: 20px;
             padding-left: 20px;
